[gd_scene load_steps=10 format=3 uid="uid://d4d3qqthxg38a"]

[ext_resource type="Script" path="res://hud/hud.gd" id="1_0rmbr"]
[ext_resource type="PackedScene" uid="uid://dplv5ybu5kawn" path="res://item/hotbar.tscn" id="2_87777"]
[ext_resource type="PackedScene" uid="uid://lvfix7a3oquy" path="res://item/inventory.tscn" id="3_kjdmw"]
[ext_resource type="PackedScene" uid="uid://b55yrhlj7w41m" path="res://item/chest.tscn" id="5_7jqsh"]
[ext_resource type="PackedScene" uid="uid://ckwk3ygwyjnx4" path="res://item/hand_craft.tscn" id="5_y4py5"]
[ext_resource type="PackedScene" uid="uid://b8cbwinp7fspc" path="res://hud/mini_map.tscn" id="6_lplle"]
[ext_resource type="PackedScene" uid="uid://bbx3l2g161d3w" path="res://item/equipment.tscn" id="7_rwpu7"]
[ext_resource type="PackedScene" uid="uid://ccp4gw8chuovg" path="res://hud/health.tscn" id="8_a00yr"]
[ext_resource type="PackedScene" uid="uid://bul8qq1o0fx3h" path="res://item/workbench.tscn" id="9_rhcbq"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_0rmbr")

[node name="Hotbar" parent="." instance=ExtResource("2_87777")]
offset_left = -666.0
offset_top = -168.0
offset_right = 666.0
offset_bottom = -24.0

[node name="Inventory" parent="." instance=ExtResource("3_kjdmw")]
offset_left = -666.0
offset_top = -600.0
offset_right = 666.0
offset_bottom = -184.0

[node name="Chest" parent="." instance=ExtResource("5_7jqsh")]
offset_left = -666.0
offset_top = -1032.0
offset_right = 666.0
offset_bottom = -616.0

[node name="Equipment" parent="." instance=ExtResource("7_rwpu7")]
offset_left = 8.0
offset_top = -1032.0
offset_right = 666.0
offset_bottom = -616.0

[node name="HandCraft" parent="." instance=ExtResource("5_y4py5")]
offset_left = -666.0
offset_top = -1032.0
offset_right = -8.0
offset_bottom = -616.0

[node name="Workbench" parent="." instance=ExtResource("9_rhcbq")]
offset_left = -666.0
offset_top = -1032.0
offset_right = 666.0
offset_bottom = -616.0

[node name="MiniMap" parent="." instance=ExtResource("6_lplle")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -720.0
offset_top = -405.0
offset_right = 720.0
offset_bottom = 405.0
grow_horizontal = 2
grow_vertical = 2

[node name="Health" parent="." instance=ExtResource("8_a00yr")]
offset_left = 16.0
offset_top = 16.0
offset_right = 496.0
offset_bottom = 64.0

[connection signal="level_erased" from="." to="Chest" method="_on_level_erased"]
[connection signal="level_erased" from="." to="MiniMap" method="_on_level_erased"]
[connection signal="level_interacted" from="." to="Chest" method="_on_level_interacted"]
[connection signal="level_placed" from="." to="Hotbar" method="_on_level_placed"]
[connection signal="level_placed" from="." to="MiniMap" method="_on_level_placed"]
[connection signal="level_readied" from="." to="MiniMap" method="_on_level_readied"]
[connection signal="player_moved" from="." to="MiniMap" method="_on_player_moved"]
[connection signal="player_picked_up" from="." to="Hotbar" method="_on_player_picked_up"]
[connection signal="item_pushed_out" from="Hotbar" to="Chest" method="_on_item_pushed_in"]
[connection signal="mouse_entered" from="Hotbar" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Hotbar" to="." method="_on_mouse_exited"]
[connection signal="overflowed" from="Hotbar" to="Inventory" method="_on_item_pushed_in"]
[connection signal="selected" from="Hotbar" to="." method="_on_hotbar_selected"]
[connection signal="item_pushed_out" from="Inventory" to="." method="_on_inventory_item_pushed_out"]
[connection signal="mouse_entered" from="Inventory" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Inventory" to="." method="_on_mouse_exited"]
[connection signal="overflowed" from="Inventory" to="." method="_on_item_dropped"]
[connection signal="erased" from="Chest" to="Inventory" method="_on_chest_erased"]
[connection signal="item_dropped" from="Chest" to="." method="_on_item_dropped"]
[connection signal="item_pushed_out" from="Chest" to="Inventory" method="_on_item_pushed_in"]
[connection signal="mouse_entered" from="Chest" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Chest" to="." method="_on_mouse_exited"]
[connection signal="opened" from="Chest" to="Inventory" method="_on_chest_opened"]
[connection signal="overflowed" from="Chest" to="Inventory" method="_on_item_pushed_in"]
[connection signal="mouse_entered" from="MiniMap" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="MiniMap" to="Hotbar" method="_on_mini_map_mouse_entered"]
[connection signal="mouse_entered" from="MiniMap" to="MiniMap" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MiniMap" to="." method="_on_mouse_exited"]
[connection signal="mouse_exited" from="MiniMap" to="Hotbar" method="_on_mini_map_mouse_exited"]
[connection signal="mouse_exited" from="MiniMap" to="MiniMap" method="_on_mouse_exited"]
